fix layout: unconfirm txs message is too big

--- a/public/src/css/common.css
+++ b/public/src/css/common.css
@@ -302,27 +302,40 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
   border: 2px solid #6C0000;
 }
 
-.label {
+.txvalues {
+  display: inline-block;
   padding: .7em 2em;
   font-size: 13px;
   text-transform: uppercase;
   font-weight:100;
+  color: #fff;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: baseline;
+  border-radius: .25em;
 }
 
-.label-primary {
+@media (max-width: 768px) {
+  .txvalues {
+    display: block;
+    margin: 5px;
+  }
+}
+
+.txvalues-primary {
   background-color: #8DC429;
 }
 
-.label-default {
+.txvalues-default {
   background-color: #ffffff;
   color: #333;
 }
 
-.label-success {
+.txvalues-success {
   background-color: #2FA4D7;
 }
 
-.label-danger {
+.txvalues-danger {
   background-color: #AC0015;
 }
 
